Fix T55879: Crash setting render presets

Any RNA using 'rna_SceneCamera_update' crashed when set from Python.